# github-mcp-server

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
src/: config.py  main.py
src/github/: __init__.py  branches.py  client.py  issues.py  pull_requests.py  repositories.py  statistics.py
src/llm/: client.py  prompts.py  recommendations.py
src/models/: schemas.py
src/tools/: branch_tools.py  issue_tools.py  pr_tools.py  recommendation_tools.py  repository_tools.py
src/utils/: exceptions.py  logger.py  pygithub.py
tests/integration/: test_github_client.py  test_tools_e2e.py
tests/unit/: test_branch_staleness.py  test_exceptions.py  test_github_logic.py  test_prompts.py  test_recommendations.py  test_schemas.py
