[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-mcp-server"
version = "0.1.0"
description = "MCP server to inspect, manage and improve GitHub repositories"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0.0",
    "PyGithub>=2.3.0",
    "groq>=0.9.0",
    "json-repair>=0.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[project.scripts]
github-mcp = "src.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
